--- a/week2/style.css
+++ b/week2/style.css
@@ -4,11 +4,12 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     color: #505050;
+    background: linear-gradient(to right, #bd2828, #d9b42e);
 }
 
 /* Header Styles */
 header {
-    background-color: #282689;
+    background-color: linear-gradient(#bd2828, #d9b42e);
     color: #fff;
     text-align: center;
     padding: 20px;
