--- a/week2/style.css
+++ b/week2/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    color: #505050;
+    color: #d92e2e;
     background: linear-gradient(to right, #bd2828, #d9b42e);
 }
 
@@ -55,7 +55,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #505050;  /* Darker shade for hover */
+    background-color: #d92e2e;  /* Darker shade for hover */
 }
 
 /* Banner Styles */
