--- a/week2/style.css
+++ b/week2/style.css
@@ -9,7 +9,7 @@ body {
 
 /* Header Styles */
 header {
-    background-color: linear-gradient(to down #bd2828, #d9b42e);
+    background-color: linear-gradient(#bd2828, #d9b42e);
     color: #fff;
     text-align: center;
     padding: 20px;
