--- a/week2/style.css
+++ b/week2/style.css
@@ -138,14 +138,14 @@ main h3 {
 .cta-container {
     text-align: center;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #fca503;
     margin-top: 30px;
 }
 
 .cta-button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #fca503;
     color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
@@ -155,7 +155,7 @@ main h3 {
 }
 
 .cta-button:hover {
-    background-color: #0056b3;
+    background-color: #fca503;
 }
 
 /* Footer Styles */
