--- a/week2/style.css
+++ b/week2/style.css
@@ -143,7 +143,7 @@ main h3 {
 }
 
 .cta-button {
-    display: inline-oval;
+    display: inline-box;
     padding: 10px 20px;
     background-color: #fca503;
     color: #d92e2e;
