--- a/week2/style.css
+++ b/week2/style.css
@@ -146,7 +146,7 @@ main h3 {
     display: inline-box;
     padding: 10px 20px;
     background-color: #ad0707;
-    color: #ad0707;
+    color: #fff;
     text-decoration: hover;
     border-radius: 5px;
     font-weight: bold;
@@ -155,7 +155,7 @@ main h3 {
 }
 
 .cta-button:hover {
-    background-color: #ad0707;
+    background-color: #fff;
 }
 
 /* Footer Styles */
