--- a/week3/style.css
+++ b/week3/style.css
@@ -5,12 +5,12 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     color: #000000;
-    background: linear-gradient(to right, #059393, #022c2c);
+    background: linear-gradient(to right, #08bdbd, #89ecec);
 }
 
 /* Header Styles */
 header {
-    background: linear-gradient(#059393, #022c2c);
+    background: linear-gradient(#08bdbd, #89ecec);
     color: #050505;
     text-align: center;
     padding: 20px;
