--- a/week3/style.css
+++ b/week3/style.css
@@ -194,54 +194,58 @@ footer p {
 * {
     box-sizing: border-box;
     }
-    .slideshow-img {
-    vertical-align: middle;
-    width: 100%;
+    .slideshow-container{
+        max-width: 800px;
+        position:relative;
     }
-    /* Position the image container (needed to position the left and right
-arrows) */
-.container {
-    position: relative;
+   
+    
+    .container{
+       max-width: 800px;
+        position:relative;
     }
-    /* Hide the images by default */
-    .mySlides {
-    display: none;
+    .mySlides{
+        display: none;
     }
-    /* Add a pointer when hovering over the thumbnail images */
-    .cursor {
-    cursor: pointer;
+    .mySlides img{
+        width: 100%;
+        height:auto;
     }
-    /* Next & previous buttons */
+    .cursor{
+        cursor:pointer;
+    }
+
+
     .prev,
-    .next {
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
+    .next{
+        cursor: pointer;
+        position:absolute;
+        top: 60%;
+        
+        padding:16px;
+        margin-top: -50px;
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        -webkit-user-select:none;
+        
     }
-    /* Position the "next button" to the right */
-    .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+    .next{
+        right: 0;
+        left: initial;
+        border-radius: 3px 0 0 3px;
     }
-    /* On hover, add a black background color with a little bit see-through */
+   
     .prev:hover,
-    .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    .next:hover{
+        background-color: rgba (0, 0, 0, 0.8);
     }
-    /* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
+    .numbertext{
+        color:#f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position:absolute;
+        top: 0;
     }
