--- a/week3/style.css
+++ b/week3/style.css
@@ -5,12 +5,12 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     color: #000000;
-    background: linear-gradient(to right, #d2ca35, #f1ed99);
+    background: linear-gradient(to right, #34cbd6, #a3f2f8);
 }
 
 /* Header Styles */
 header {
-    background: linear-gradient(#d2ca35, #f1ed99);
+    background: linear-gradient(#34cbd6, #a3f2f8);
     color: #050505;
     text-align: center;
     padding: 20px;
